# CodingAgent

./: .coverage  .gitignore  AGENTS.md  IMPLEMENTATION_REPORT.md  README-PYTHON.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  start.ps1  start.sh  start_tui.sh  starth.sh
.github/workflows/: ci.yml  python-tests.yml
agent-brain/identity/: LAWS.md  SOUL.md
agent-brain/roles/: operational.md  strategic.md
agent-brain/skills/: dry.md
benchmarks/: scenarios.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FINAL_AUDIT_REPORT.md  MEMORY_ARCHITECTURE.md  NEW_AUDIT_INSTRUCTIONS.md  TOOLS_GAP_ANALYSIS.md  TUI_SPEC.md  gap-analysis.md  memory-implementation.md  mvp-tasklist.md  system_capability_report.md  system_map.md  test-coverage-analysis.md  test-plan.md  tooloptimization.md  tuispec.md  unified_plan.md
docs/audit/: audit-instructions.md  audit-report-tui-eventbus.md  audit-report-vol10-fixes.md  audit-report-vol10.md  audit-report-vol11.md  audit-report-vol3.md  audit-report-vol4.md  audit-report-vol5.md  audit-report-vol9.md  audit-report.md  deep-audit-supplement.md  fixes-applied.md  fixing-findings.md  implementation-plan.md  system-audit-report.md
output/: TEST.md  hello.py
output/.agent-context/: ACTIVE.md  TASK_STATE.md  execution_trace.json
scripts/: add_provider.py  analyze_tokens.py  check_providers_and_models.py  diagnose_lmstudio.py  ensure_venv.sh  fetch_ollama.py  generate_system_map.py  list_prompts.py  refresh_summaries.py  run_benchmark.py  run_generate.py  run_tui.py  simulate_tui.py  start_tui.py  test_agent_stability.py  test_langgraph_node.py  test_llm_stability.py  test_real_lmstudio.py  test_real_lmstudio_file_edit.py  test_tools.py  tree.json  validate_ollama.py  wait_for_model.py
src/: main.py
src/adapters/: lm_studio_adapter.py  ollama_adapter.py
src/config/: providers.json  schema.json
src/core/: llm_manager.py  logger.py  startup.py  user_prefs.py
src/tools/: __init__.py  _path_utils.py  _registry.py  _security.py  _tool.py  ast_tools.py  file_tools.py  git_tools.py  guardrails.py  interaction_tools.py  lint_dispatch.py  memory_tools.py  patch_tools.py  project_tools.py  registry.py  repo_analysis_tools.py  repo_summary.py  repo_tools.py  role_tools.py  state_tools.py  subagent_tools.py  symbol_reader.py  system_tools.py  todo_tools.py  tools_config.py  verification_tools.py  web_tools.py
src/ui/: README.md  __init__.py  app.py  textual_app.py  textual_app_impl.py
tests/: conftest.py
tests/benchmarks/: __init__.py  test_pipeline_benchmarks.py
(+250 files in other folders)
