[project]
name = "codingagent"
version = "0.1.0"
description = "Local coding agent orchestration using LM Studio / Ollama"
readme = "README.md"
requires-python = ">=3.11,<3.12"

[project.dependencies]
requests = "==2.31.0"
httpx = "==0.28.0"
textual = "==8.1.0"
openai = "==2.0.0"
python-dotenv = "==1.0.0"
typing-extensions = "==4.5.0"
uv = "==0.10.0"
PyYAML = "==6.0"
langgraph = ">=0.2.0"
langchain-core = ">=0.3.0"
pydantic = ">=2.0.0"
pandas = ">=2.0.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff==0.12.0",
  "black==23.9.0",
  "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = "py311"

[tool.codingagent]
# Project-local virtualenv that must be used for development and testing
venv = ".venv"
enforce_venv = true
